add new classes